# chimpdao-contracts

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  MAKEFILE  Makefile  README.md  README_NFC.md  environments.toml  index.html  package-lock.json  package.json  vite.config.ts
.config/stellar/: stellar_merch_shop_testnet_id
.github/: dependabot.yml
.github/workflows/: build.yml  contract-release.yml  contract.yml
Chimp/: Info.plist  PRIVACY_POLICY.md
Chimp/Chimp/: ChimpApp.swift  ContentView.swift  ViewController.swift
Chimp/Chimp.xcodeproj/: project.pbxproj
NFCBridge/: README.md
NFCBridge/NFCBridge/: App.swift  ContentView.swift  Info.plist  NFCBridge.entitlements  TROUBLESHOOTING.md
NFCBridge/NFCBridge.xcodeproj/: project.pbxproj
NFCMerch/: README.md
NFCMerch/NFCMerch/: App.swift  ContentView.swift  Info.plist
NFCMerch/NFCMerch.xcodeproj/: project.pbxproj
contracts/: collection.wasm  nfc_nft.wasm
contracts/collection/: Cargo.toml
contracts/nfc-nft/: Cargo.toml
contracts/prize/: Cargo.toml
contracts/stellar-merch-shop/: Cargo.toml
dapp/: index.html  package.json  tsconfig.app.json  vite.config.ts
dapp/scripts/: REGENERATE_NFC_TEST_SIGS.md  recover-test-sigs.cjs
dapp/src/: App.tsx
nfc-server/: DEBUG.md  index.js  package-lock.json  package.json  test-blocksec2go.js
src/: App.tsx
src/components/: ChipProgressIndicator.tsx  ConfigurationSection.tsx  KeyManagementSection.tsx  NDEFOperationsSection.tsx  NFCMintProduct.tsx  NFCStatus.tsx  NetworkPill.tsx
src/contracts/: util.ts
src/hooks/: useChipAuth.ts  (+3 more)
(+190 files in other folders)
