[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors = ["ChimpDAO"]
edition = "2024"
license = "BSD-3"
repository = "https://github.com/consulting-manao/chimpdao"
version = "1.0.0"

[workspace.dependencies.soroban-sdk]
version = "23.4.0"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
